force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <label>Patient</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Patient Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>