force-app/main/default/objects/Patient__c/fields/DischargeDate__c.field-meta.xml
<CustomField>
    <fullName>DischargeDate__c</fullName>
    <label>Discharge Date</label>
    <type>DateTime</type>
</CustomField>