force-app/main/default/objects/Patient__c/fields/Patient_Care__c.field-meta.xml
<CustomField>
    <fullName>Patient_Care__c</fullName>
    <label>Patient Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inpatient</fullName>
            </value>
            <value>
                <fullName>Outpatient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>