force-app/main/default/objects/Patient__c/fields/Readmission__c.field-meta.xml
<CustomField>
    <fullName>Readmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Readmission</label>
    <type>Checkbox</type>
</CustomField>